2010-11-03  Glenn Morris  <rgm@gnu.org>

	* play/gomoku.el (gomoku-loosing-threshold): Correct spelling.
	(gomoku-human-plays): Use new name.

	* play/gomoku.el (nil-score, Xscore, XXscore, XXXscore, XXXXscore)
	(Oscore, OOscore, OOOscore, OOOOscore): Rename with gomoku- prefix.
	(gomoku-score-trans-table, gomoku-winning-threshold)
	(gomoku-loosing-threshold, gomoku-init-score-table): Use new names.

2010-11-03  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el: Don't put built-in packages in
	package-alist, to avoid loading inefficiencies.
	(package-built-in-p): Make VERSION optional, and treat it as a
	minimum acceptable version.
	(package-activate): Search separately for built-in packages.  Emit
	a warning if a dependency fails.
	(define-package): Handle most common case, where there is no
	obsolete package, first.
	(package-compute-transaction): Print required version in error.
	(package--initialized): New variable.
	(list-packages): Use it.
	(package-initialize): Optional arg NO-ACTIVATE.  Don't put
	built-in packages in packages-alist; keep it separate.  Set
	package--initialized.
	(describe-package): Avoid activating packages as a side-effect.
	Search separately for built-in packages.
	(describe-package-1): Handle the case where an elpa package is
	simultaneously built-in and available/installed.
	(package-installed-p, package--generate-package-list): Search
	separately for built-in packages.
	(package-load-descriptor): Doc fix.

2010-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/perl-mode.el (perl-syntax-propertize-function):
	Handle __DATA__ and __END__.

2010-11-02  Noah Friedman  <friedman@splode.com>

	* emacs-lisp/bytecomp.el (byte-recompile-file): If bytecomp-arg is
	nil, do not ask to recompile files that are not already compiled,
	and do not recompile them.

2010-11-02  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el (package-initialize): Ensure that